NetBSD Problem Report #57845

From www@netbsd.org  Sat Jan 13 11:17:51 2024
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 39F7E1A9239
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 13 Jan 2024 11:17:51 +0000 (UTC)
Message-Id: <20240113111750.272241A923A@mollari.NetBSD.org>
Date: Sat, 13 Jan 2024 11:17:50 +0000 (UTC)
From: code-netbsd@yoyomail.de
Reply-To: code-netbsd@yoyomail.de
To: gnats-bugs@NetBSD.org
Subject: Fix for Microsoft Sculp Ergonomic Wireless Keyboard / Mouse 
X-Send-Pr-Version: www-1.0

>Number:         57845
>Category:       kern
>Synopsis:       Fix for Microsoft Sculp Ergonomic Wireless Keyboard / Mouse
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Jan 13 11:20:00 +0000 2024
>Closed-Date:    Sun Jan 14 16:45:05 +0000 2024
>Last-Modified:  Sun Jan 14 16:45:05 +0000 2024
>Originator:     M. Boerschig
>Release:        10.0_RC2
>Organization:
>Environment:
NetBSD 10.0_RC2 (GENERIC) amd64
>Description:
The appended patch adds support for the Microsot Sculp Wireless keyboard/mouse.
It has the same problem that was fixed in kern/55161 -- I was not sure if I should append to the old PR and re-open it. So here is a new one.

The x/y coordinates of the mouse trigger scroll wheel events, the patch fixes this. Tested on a Xfce4 desktop.
>How-To-Repeat:
Make the mistake of buying a Microsoft product... again :-).
>Fix:
diff --git a/sys/dev/usb/ums.c b/sys/dev/usb/ums.c
index 8a64791d3c33..7529971282f2 100644
--- a/sys/dev/usb/ums.c
+++ b/sys/dev/usb/ums.c
@@ -181,6 +181,7 @@ ums_attach(device_t parent, device_t self, void *aux)
 			fixpos = 24;
 			break;
 		case USB_PRODUCT_MICROSOFT_24GHZ_XCVR80:
+		case USB_PRODUCT_MICROSOFT_24GHZ_XCVR90:
 			fixpos = 40;
 			woffset = sc->sc_ms.hidms_loc_z.size;
 			break;
diff --git a/sys/dev/usb/usbdevs b/sys/dev/usb/usbdevs
index 1b5afc33f1f9..9d2a03ae5b3b 100644
--- a/sys/dev/usb/usbdevs
+++ b/sys/dev/usb/usbdevs
@@ -2363,6 +2363,7 @@ product MICROSOFT 24GHZ_XCVR10		0x071d	2.4GHz Transceiver V1.0
 product MICROSOFT 24GHZ_XCVR20		0x071f	2.4GHz Transceiver V2.0
 product MICROSOFT 24GHZ_XCVR70		0x0745	2.4GHz Transceiver V7.0
 product MICROSOFT 24GHZ_XCVR80		0x07b2	2.4GHz Transceiver V8.0
+product MICROSOFT 24GHZ_XCVR90		0x07a5	2.4GHz Transceiver V9.0
 product MICROSOFT CM6000		0x077d	Comfort Mouse 6000

>Release-Note:

>Audit-Trail:
From: "Harold Gutch" <hgutch@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/57845 CVS commit: src/sys/dev/usb
Date: Sat, 13 Jan 2024 14:42:14 +0000

 Module Name:	src
 Committed By:	hgutch
 Date:		Sat Jan 13 14:42:14 UTC 2024

 Modified Files:
 	src/sys/dev/usb: usbdevs

 Log Message:
 Add Microsoft Sculpt Wireless keyboard/mouse.

 From M. Boerschig in PR 57845.


 To generate a diff of this commit:
 cvs rdiff -u -r1.812 -r1.813 src/sys/dev/usb/usbdevs

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Harold Gutch" <hgutch@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/57845 CVS commit: src/sys/dev/usb
Date: Sat, 13 Jan 2024 15:26:36 +0000

 Module Name:	src
 Committed By:	hgutch
 Date:		Sat Jan 13 15:26:36 UTC 2024

 Modified Files:
 	src/sys/dev/usb: ums.c

 Log Message:
 Add workaround for Microsoft Sculpt Wireless keyboard/mouse.

 From M. Boerschig in PR 57845.


 To generate a diff of this commit:
 cvs rdiff -u -r1.104 -r1.105 src/sys/dev/usb/ums.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: hgutch@NetBSD.org
State-Changed-When: Sat, 13 Jan 2024 15:47:25 +0000
State-Changed-Why:
Thanks, applied to current and requested a pullup to the 10 branch.


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/57845 CVS commit: [netbsd-10] src/sys/dev/usb
Date: Sun, 14 Jan 2024 15:51:05 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sun Jan 14 15:51:05 UTC 2024

 Modified Files:
 	src/sys/dev/usb [netbsd-10]: usbdevs

 Log Message:
 Pull up following revision(s) (requested by hgutch in ticket #549):

 	sys/dev/usb/usbdevs: revision 1.813

 Add Microsoft Sculpt Wireless keyboard/mouse.
 From M. Boerschig in PR 57845.


 To generate a diff of this commit:
 cvs rdiff -u -r1.806.4.1 -r1.806.4.2 src/sys/dev/usb/usbdevs

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/57845 CVS commit: [netbsd-10] src/sys/dev/usb
Date: Sun, 14 Jan 2024 15:52:26 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sun Jan 14 15:52:26 UTC 2024

 Modified Files:
 	src/sys/dev/usb [netbsd-10]: ums.c

 Log Message:
 Pull up following revision(s) (requested by hgutch in ticket #549):

 	sys/dev/usb/ums.c: revision 1.105

 Add Microsoft Sculpt Wireless keyboard/mouse.
 From M. Boerschig in PR 57845.


 To generate a diff of this commit:
 cvs rdiff -u -r1.103 -r1.103.4.1 src/sys/dev/usb/ums.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Sun, 14 Jan 2024 16:45:05 +0000
State-Changed-Why:
pullup applied (unless you want to pull up to netbsd-9/8 too)


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2024 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.