Add workaround for Microsoft Sculpt Wireless keyboard/mouse.

From M. Boerschig in PR 57845.